<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GameRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".GameRegisterFragment">



        <TextView
            android:layout_width="250dp"
            android:layout_height="155dp"
            android:layout_margin="80dp"
            android:padding="60dp"
            android:text="@string/register_game"
            android:textSize="22sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="-29dp" />

        <TextView
            android:layout_width="384dp"
            android:layout_height="134dp"
            android:gravity="center"
            android:padding="42dp"
            android:text="@string/enregistrer"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="117dp" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="332dp"
            android:layout_height="70dp"
            android:background="@color/third"
            android:hint="@string/utilisateur"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="275dp" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="332dp"
            android:layout_height="70dp"
            android:background="@color/third"
            android:hint="@string/email"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="355dp" />


        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="332dp"
            android:layout_height="70dp"
            android:background="@color/third"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="435dp" />

        <EditText
            android:id="@+id/editTextVerificationPassword"
            android:layout_width="332dp"
            android:layout_height="70dp"
            android:background="@color/third"
            android:hint="@string/verification_mot_de_passe"
            android:inputType="textPassword"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="515dp" />

        <Button
            android:id="@+id/button_connexion"
            android:layout_width="332dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/inscrire"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="618dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>