<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameHomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_product"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_marginVertical="15dp"
        android:elevation="8dp"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_image_bg"
            >

            <ImageView
                android:id="@+id/id_image_jeu_item"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginVertical="10dp"
                android:src="@drawable/img3"
                android:background="@android:color/transparent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/id_constraint_block"
                android:layout_width="169dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/id_image_jeu_item"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/title_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15sp"
                    android:text="@string/item_name_game"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/name_editeur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/item_name_editor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_game"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/id_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_editeur"
                    android:background="@android:color/transparent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/id_constraint_block"
                android:background="@color/secondary">

                <TextView
                    android:id="@+id/id_detail_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:background="@color/secondary"
                    android:text="@string/item_info"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>