<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameHomeFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/item_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_marginVertical="15dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/idIVCourseImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/img3" />

            <TextView
                android:id="@+id/idTVCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/idIVCourseImage"
                android:text="@string/check_start"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/idTVCourseRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVCourseName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/idIVCourseImage"
                android:drawablePadding="2dp"
                android:text="@string/dont_like_content" />
            <RatingBar
                android:id="@+id/rBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5"
                android:background="@color/white"
                android:numStars="4"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="0.5"
                android:visibility="visible"
                android:progressTint="#06CD0E"
                android:progressBackgroundTint="#a8a8a8"
                android:layout_marginLeft="10dp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>